# brixide

./: .gitignore  Cargo.toml  README.md
launcher/: Cargo.toml
launcher/src/: lib.rs  main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs  logging.rs  payloads.rs  player.rs  rpc.rs
plugins/ping_pong_plugin/: Cargo.toml  README.md  plugin.toml
plugins/ping_pong_plugin/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  matchers.rs  plugins.rs  server.rs  wsl.rs
tools/: ip.sh
