[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
clap = "2.33.3"
dialoguer = "0.8.0"
fern = { version = "0.6.0", features = ["colored"] }
lazy_static = "1.4"
log = "0.4.14"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8.0", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde"] }

launcher = { path = "../launcher" }
plugin = {path = "../plugin" }
