[package]
name = "ping_pong_plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.8.1", features = ["full"] }

plugin = { path = "../../plugin" }
